--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -1,5 +1,5 @@
-@import "./base/base";
-@import "./utils/variables";
+@import "./Base/base";
+@import "./Utils/variables";
 @import "./Layout/footer";
 @import "./Layout/container";
 @import "./Layout/header";
