--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -5,5 +5,6 @@
 @import "./Layout/header";
 @import "./Layout/nav";
 @import "./Layout/listFormations";
+@import "./Layout/pageFormation";
 @import "./Components/myloader";
 @import "./Components/mixins";
