--- a/frontend/sass/Layout/_header.scss
+++ b/frontend/sass/Layout/_header.scss
@@ -1,45 +1,67 @@
-.projPrev {
-    min-width: 440px;
-    max-width: 1200px;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    background: #071b46;
-    padding: 2%;
-    margin: 0 auto;
-    margin-top: 0.5rem;
-    flex-direction: row;
-    color: #fff;
-    border: solid 5px rgb(231, 233, 237);
-    &__groupo {
-        width: 80%;
-        height: 100%;
-        padding: 2%;
-        display: flex;
-        margin: 0 auto;
-        &__img {
-            display: flex;
-            width: 20%;
-            height: 100%;
-            object-fit: cover;
-            margin: 0 auto;
-            filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(103deg) brightness(106%) contrast(100%);
-        }
-        &__pic {
-            display: flex;
-            width: 80%;
-            height: 90%;
-            align-self: center;
-            font-size: 7.5vw;
-            margin: 0 auto;
-        }
-        &__masq {
-            display: flex;
-            width: 20%;
-            height: 90%;
-            align-self: center;
-            margin: 0 auto;
-        }
-    }
-}
+            .projPrev {
+                min-width: 440px;
+                max-width: 1200px;
+                display: flex;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                background: #071b46;
+                padding: 2%;
+                margin: 0 auto;
+                margin-top: 0.5rem;
+                flex-direction: row;
+                color: #fff;
+                border: solid 5px rgb(231, 233, 237);
+                &__groupo {
+                    width: 80%;
+                    height: 100%;
+                    padding: 2%;
+                    display: flex;
+                    margin: 0 auto;
+                    &__img {
+                        display: flex;
+                        width: 20%;
+                        height: 100%;
+                        object-fit: cover;
+                        margin: 0 auto;
+                        filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(103deg) brightness(106%) contrast(100%);
+                    }
+                    &__pic {
+                        display: flex;
+                        width: 80%;
+                        height: 90%;
+                        align-self: center;
+                        font-size: 7.5vw;
+                        margin: 0 auto;
+                    }
+                    &__masq {
+                        display: flex;
+                        width: 20%;
+                        height: 90%;
+                        align-self: center;
+                        margin: 0 auto;
+                    }
+                    &__calque {
+                        display: flex;
+                        width: 90%;
+                        height: 90%;
+                        align-self: center;
+                        margin: 0 auto;
+                    }
+                }
+                &__groupobis {
+                    width: 100%;
+                    height: 100%;
+                    padding: 2%;
+                    display: flex;
+                    flex-direction: column;
+                    &__img {
+                        display: flex;
+                        width: 20%;
+                        height: 100%;
+                        object-fit: cover;
+                        margin: 0 auto;
+                        filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(103deg) brightness(106%) contrast(100%);
+                    }
+                }
+            }
